@@ -37,6 +37,8 @@ Legend:
 * Changed default D3D Fullscreen hotkey to Ctrl+Alt+F
 * Disabled Frame Time Correction hotkey by default
 * DVB: Some filters that are known to be incompatible with the BDA source filters are now blacklisted
+* External filters: Use two separated lists for x86 and x64 since x86 filters only work with MPC-HC x86
+  and vice-versa
 * Ticket #978, Apply the "Repeat" option after "Play next in the folder": the option will now take
   effect after the next file in the folder was played (similarly to what happens for playlist items)
 * Ticket #1620, UI: Use the new styled radio bullet for menu's items
